# typer-duo

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/typer_duo/: __init__.py  app.py  cli.py  constants.py  context.py  decorators.py  errors.py  formatting.py  types.py
src/typer_duo/audit/: __init__.py  ast_walker.py  detectors.py  diff.py  entry_point.py  models.py
src/typer_duo/scaffold/: __init__.py
src/typer_duo/scaffold/templates/: CLAUDE.md.j2  pyproject.toml.j2
src/typer_duo/scaffold/templates/src/: __init__.py.j2  cli.py.j2
src/typer_duo/scaffold/templates/tests/: test_cli.py.j2
tests/: test_app.py  test_audit_cli.py  test_audit_detectors.py  test_audit_diff.py  test_audit_entry_point.py  test_constants.py  test_context.py  test_decorators.py  test_errors.py  test_formatting.py  test_scaffold.py  test_subapps.py
tests/fixtures/audit/duo-typer/: pyproject.toml
tests/fixtures/audit/duo-typer/src/duo_typer/: cli.py
tests/fixtures/audit/mixed/: pyproject.toml
tests/fixtures/audit/mixed/src/mixed_proj/: cli.py
tests/fixtures/audit/plain-typer/: pyproject.toml
tests/fixtures/audit/plain-typer/src/plain_typer/: cli.py
