[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typer-duo"
version = "0.1.0"
description = "Agent-ready dual-output for Typer CLIs: JSON to stdout, human text to stderr"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
scaffold = ["jinja2>=3.0"]
all = ["rich>=13.0", "jinja2>=3.0"]
dev = ["pytest>=7.0", "rich>=13.0", "jinja2>=3.0"]

[project.scripts]
typer-duo = "typer_duo.scaffold:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
